wow more spacing fixes!

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 		right: 20px;
 		border: 1px solid #075384;
 		border-radius: 10px;
+		margin-bottom: 10px;
 		
 	}
 	
@@ -43,9 +44,9 @@
 		float: right;
 		width: 50%;
 		padding-bottom: 5px;
-		padding-top: 5px;
+		padding-top: 15px;
 		padding-left: 10px;
-		
+		font-size: 14px;
 		
 	}
 	#botPara{
@@ -57,6 +58,7 @@
 		width: 50%;
 		padding-bottom: 5px;
 		padding-top: 5px;
+		font-size: 14px;
 		
 	}
 	
@@ -64,7 +66,7 @@
 		margin-top: 0px;
 		margin-bottom: 0px;
 		padding-top: 0px;
-		padding-bottom: 0px;
+		padding-bottom: 10px;
 		font-family: "Arial", sans-serif;
 		color: white;
 		/*background-color: #075384;*/
